<resources>
    <string name="app_name">Alura Viajem</string>
    <string name="especiais">Especiais</string>
    <string name="brasil">Brasil</string>
    <string name="banner_inical_dos_pacotes">Banner inical dos pacotes</string>
    <string name="realizar_pagamento">Realizar pagamento</string>
    <string name="preco_final">Preço final:</string>
    <string name="imagem_ilustraticao_do_pacote">Imagem ilustratica do pacote</string>
    <string name="numero_do_cartao">Número do cartão</string>
    <string name="titulo_infor_pgto">Digite as informações do cartão que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="nome_no_cartao">Nome no cartão</string>
    <string name="finaliza_compra">Finaliza compra</string>
    <string name="mm">MM</string>
    <string name="aa">AA</string>
    <string name="cvc">CVC</string>
    <string name="mascara_para_nome_no_cartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="parabens">Parabéns</string>
    <string name="conteudo_do_banner_inicial">Banner inicial</string>
    <string name="compra_realizada">Compra realizada com sucesso :)</string>
    <string name="confira_resumo">Confira resumo da compra</string>
    <string name="imagem_do_pacote">Imagem do pacote</string>
</resources>